--- a/index.html
+++ b/index.html
@@ -37,9 +37,30 @@
                 </label>
                 <br><br>
                 <label for="email"> Email <Address></Address> <input type="text" placeholder="email address" required></label>
+                <br><br>
                 <label for="phone">
                     Phone Number <input type="number" placeholder="Phone number" required>
                 </label>
+                <br><br>
+                <label for="religion">
+                    Please tick your apprpriate religion(s)
+                    <br>
+                    <input type="checkbox" name="religion" id="religion" value="Christian">
+                    Christian
+                </label>
+                <label for="religion">
+                    <input type="checkbox" name="religion" id="religion" value="Islam">
+                    Islam
+                </label>
+                <label for="religion">
+                    <input type="checkbox" name="religion" id="religion" value="Indian">
+                    Indian
+                </label>
+                <label for="religion">
+                    <input type="checkbox" name="religion" id="religion" value="other">
+                    other
+                </label>
+
             </form>
         </div>
     </section>
