--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="bg">
     <section>
         <div>
             <h1>School Registration Form</h1>
