--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                         other
                     </label>
                 </div>
+                <div class="submit">
+                    <input type="submit" value="Submit">
+                </div>
+                
             </form>
         </div>
     </section>
