--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <br><br>
                 <div class="form">
-                    <label for="email"> Email <Address></Address> <input type="text" placeholder="email address" required></label>
+                    <label for="email"> Email <input type="text" placeholder="email address" required></label>
                 </div>
                 <br><br>
                 <div class="form">
